<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:background="@mipmap/head"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/xin_shou"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/xinshou"
                android:textSize="25sp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:background="#00000000"
                />
            <LinearLayout
                android:id="@+id/mynews"
                android:layout_marginLeft="80dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="55dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/mynews_son1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/mynews"/>
                <TextView
                    android:id="@+id/mynews_son2"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的消息"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <SearchView
            android:id="@+id/search"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:queryHint="请输入搜索内容"
            android:background="@drawable/corner"
            android:layout_gravity="center"
            android:iconifiedByDefault="false"
            android:layout_marginTop="20dp"
            >

        </SearchView>

        <TextView
            android:id="@+id/tiptext"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="75dp"
            android:gravity="center"

            />

        <com.example.myapplication.RadiantSunLayout
            android:id="@+id/radiantSun"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/saysomething"
            >
            <Button
                android:id="@+id/say_button"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/saysomethinglist"
                />
            <!-- 其他控件-->
        </com.example.myapplication.RadiantSunLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/littleshit1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/littleshit1_son1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:src="@mipmap/home1"/>
            <TextView
                android:id="@+id/littleshit1_son2"
                android:layout_gravity="center"
                android:text="@string/shouye"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/littleshit2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/littleshit2_son1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:src="@mipmap/readpicture"/>
            <TextView
                android:id="@+id/littleshit2_son2"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuedu"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/littleshit3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/littleshit3_son1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:src="@mipmap/picturehead"/>

            <TextView
                android:id="@+id/littleshit3_son2"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beiwanglu"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/littleshit4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/littleshit4_son1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:src="@mipmap/user1"/>
            <TextView
                android:id="@+id/littleshit4_son2"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wode"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

